Technical/CloudComputing/Compute/virtualization/nova/文档/easystack产品/ComputingService/6.1.3/zh-cn/UserGuide/AZHostAggregates.md
---
title: 可用区与主机集合
---

本章节主要介绍在可用区与主机集合页面中，针对可用区与主机集合的一系列运维管理操作，如：管理主机、编辑主机集合和删除主机集合等。其中，在云平台的顶部导航栏中，依次选择\[产品与服务]-\[计算]-\[可用区与主机集合]，即可进入“可用区与主机集合”页面。

# 创建主机集合

1. 在“可用区与主机集合”页面中，单击 `创建主机集合` ，弹出“创建主机集合”对话框。​

2. 配置参数后，单击 `创建` ，完成操作。

   > 说明：
   > 
   > * 当新创建的可用区与主机集合中没有添加物理主机时，将无法看到新创建的可用区。
   > * 不同可用区之间可以设置计算、存储和网络资源的相互隔离。因此，当手动撤离或迁移云主机时，请确保所选节点在该云主机所属可用区内或在未设置资源隔离的可用区内。
   > * 主机高可用服务将根据云主机所在节点的可用区，自动撤离或迁移云主机到该可用区的其他节点。

# 管理主机

1. 在“可用区与主机集合”页面的\[主机集合]页签中，勾选待操作主机集合后，单击 `管理主机` ，弹出“添加/删除计算节点”对话框。

2. 配置参数后，单击 `保存` ，完成操作。

   > 说明：
   > 
   > 当待操作计算节点上已运行云主机时，建议先将云主机迁移到其他节点，再变更其主机集合与可用区。

# 删除主机集合

1. 在“可用区与主机集合”页面的\[主机集合]页签中，勾选待操作主机集合后，单击 `删除主机集合` ，弹出“删除主机集合”提示框。

2. 单击 `删除` ，完成操作。

   > 说明：
   > 
   > 只有主机集合不包含任何物理主机时，该主机集合才可被删除。

# 编辑主机集合

1. 在“可用区与主机集合”页面的\[主机集合]页签中，勾选待操作主机集合后，单击 `编辑主机集合` ，弹出“编辑主机集合”对话框。

2. 配置参数后，单击 `保存` ，完成操作。

# 配置CPU超售比

1. 在“可用区与主机集合”页面的\[可用区]页签中，勾选待操作可用区后，单击 `配置CPU超售比` ，弹出“配置CPU超售比”对话框。

2. 配置参数后，单击 `确认` ，完成操作。

   > 说明：
   > 
   > * 当调小CPU超售比后，可能出现《配额管理》中vCPU的“已分配”值大于“配额”值的情况，导致新建项目无法分配到vCPU配额。在这种情况下，如果要为新建项目设置vCPU配额，需要减少其他项目的配额以释放可用配额。
   >
   > * 在配置CPU超售比后，超售比生效时间有一定延迟，但不会超过1分钟。
